--- a/src/app/manager/manager2/manager2.component.html
+++ b/src/app/manager/manager2/manager2.component.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="progressBar">
-          <ngb-progressbar height="2px" type="success" [value]="77"></ngb-progressbar>
+          <ngb-progressbar height="2px" type="success" [value]="item.percent"></ngb-progressbar>
           <!--<div class="progress" style="width: 95%"></div>-->
         </div>
 
