--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -86,7 +86,7 @@
       </div>
 
       <div class="chatWrap">
-        <img src="assets/images/Chart.png" alt="aclt">
+        <img src="assets/images/Chart.png" alt="alt">
       </div>
     </div>
   </div>
