--- a/src/app/territorial/territorial1/territorial1.component.html
+++ b/src/app/territorial/territorial1/territorial1.component.html
@@ -3,21 +3,7 @@
 
   <!--  date inputs  -->
 
-  <div class="dateInputsWrap">
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <input type="text" placeholder="25/06/2019">
-    </div>
-    <div class="sep">—</div>
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <input type="text" placeholder="25/06/2019">
-    </div>
-  </div>
+  <app-date-inputs></app-date-inputs>
 
   <!--  /date inputs  -->
 
