--- a/src/app/territorial/territorial2/territorial2.component.html
+++ b/src/app/territorial/territorial2/territorial2.component.html
@@ -3,21 +3,7 @@
 
   <!--  date inputs  -->
 
-  <div class="dateInputsWrap">
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <input type="text" placeholder="25/06/2019">
-    </div>
-    <div class="sep">—</div>
-    <div class="dateInput">
-      <div class="calendal">
-        <img src="assets/images/calendar.png" alt="alt">
-      </div>
-      <input type="text" placeholder="25/06/2019">
-    </div>
-  </div>
+  <app-date-inputs></app-date-inputs>
 
   <!--  /date inputs  -->
 
@@ -45,7 +31,7 @@
         </div>
 
         <div class="progressBar">
-          <ngb-progressbar height="2px" type="success" [value]="77"></ngb-progressbar>
+          <ngb-progressbar height="2px" type="success" [value]="item.percent"></ngb-progressbar>
           <!--<div class="progress" style="width: 95%"></div>-->
         </div>
 
