--- a/src/app/territorial/territorial3/territorial3.component.css
+++ b/src/app/territorial/territorial3/territorial3.component.css
@@ -114,7 +114,7 @@
 .innerTab .tableWrap table tr {
   border-top: 1px solid #e9eaeb;
   border-bottom: 1px solid #e9eaeb; }
-.innerTab .tableWrap table tr:nth-child(odd) {
+.innerTab .tableWrap table tr:nth-child(even) {
   background: #f3f7f9; }
 .innerTab .tableWrap table tr td {
   padding: 20px 0; }
